--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -112,12 +112,14 @@ permalink: /:title
 category_list:
     - category: CloudFeatures
       title: Cloud Features
+      excerpt: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
       subs:
         - title: Analytics 
           excerpt: Drop-in analytics to track user sessions, custom user attributes, and in-app metrics.
           cta: Read more
           class: aws-icon-ps-60-pie-bar-charts 
           url: '/media/analytics_guide'
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
           services:
             - title: Amazon Pinpoint,
               url: https://aws.amazon.com/pinpoint/
@@ -129,7 +131,8 @@ category_list:
           excerpt: A simple and secure solution for making HTTP requests using REST and GraphQL, with support for real-time data.
           cta: Read more
           class: aws-icon-ps-60-database-server
-          url: '/media/api_guide'    
+          url: '/media/api_guide' 
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'   
           services: 
             - title: Amazon API Gateway,
               url: https://aws.amazon.com/api-gateway
@@ -140,6 +143,7 @@ category_list:
           cta: Read more
           class: aws-icon-ps-60-shield-circle
           url: '/media/authentication_guide'
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
           services:
             - title: Amazon Cognito,
               url: https://aws.amazon.com/cognito/
@@ -152,6 +156,7 @@ category_list:
           cta: Read more
           class: aws-icon-ps-60-network-nodes
           url: '/media/hosting_guide'   
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
           services:
               - title: Amazon CloudFront
                 url: https://aws.amazon.com/cloudfront/
@@ -160,6 +165,7 @@ category_list:
           cta: Read more
           class: aws-icon-ps-60-bubble-gear
           url: '/media/interactions_guide'   
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
           services:
               - title: Amazon Lex
                 url: https://aws.amazon.com/lex/
@@ -168,6 +174,7 @@ category_list:
           cta: Read more
           class: aws-icon-ps-60-circular-circuit
           url: '/media/pub_sub_guide'   
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
           services:
               - title: AWS IoT,
                 url: https://aws.amazon.com/iot/
@@ -180,6 +187,7 @@ category_list:
           cta: Read more
           class: aws-icon-ps-60-device-message
           url: '/media/push_notifications_setup'   
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
           services:
               - title: Amazon Pinpoint
                 url: https://aws.amazon.com/pinpoint/
@@ -188,62 +196,73 @@ category_list:
           cta: Read more
           class: aws-icon-ps-60-file-box
           url: '/media/storage_guide'   
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
           services:
               - title: Amazon S3
                 url: https://aws.amazon.com/s3/
-    -  category: UtilityModules
-       title: Utility Modules
-       subs:
+    - category: UtilityModules
+      title: Utility Modules
+      excerpt: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+      subs:
         - title: Cache 
           excerpt: A generic LRU cache for storing data with priority and expiration settings. 
           cta: Read more
           url: '/media/cache_guide'  
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
         - title: Hub  
           excerpt: A lightweight local event bus for your app.
           cta: Read more
           url: '/media/hub_guide' 
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
         - title: I18n  
           excerpt: A lightweight internationalization solution.
           cta: Read more
           url: '/media/i18n_guide'  
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
         - title: Logger  
           excerpt: Console logging utility.
           cta: Read more
           url: '/media/logger_guide'  
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'
         - title: Service Worker 
           excerpt: A utility class to work with PWA and Service Worker APIs. 
           cta: Read more
-          url: '/media/service_workers_guide'  
-    -  category: CLI
-       title: CLI
-       subs:
-        - title: AWS Mobile CLI
-          excerpt: A CLI to create and manage your app's backend. 
-          cta: Read more
-          url: '/media/cli_guide'       
-    -  category: Front-end Support
-       title: Front-end Support
-       subs:
+          url: '/media/service_workers_guide'   
+          icon: '/amplify-theme/assets/images/icons/Misc/present.svg'     
+    - category: Front End Support
+      title: Front End Support
+      excerpt: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+      subs:
         - title: Angular 
-          excerpt: Angular support package.
+          excerpt: AWS Amplify provides Angular Components with aws-amplify-angular npm package.
           cta: Read more
           url: '/media/angular_guide' 
-        - title: Ionic
-          excerpt: Ionic starter app and component support.
-          cta: Read more
-          url: '/media/ionic_guide' 
+          icon: '/amplify-theme/assets/images/Logos/Angular-Color@1x.png'
+          id: angular
         - title: React 
-          excerpt: React support package.
+          excerpt: AWS Amplify provides React Components with aws-amplify-react npm package and a starter App.
           cta: Read more
           url: '/media/react_guide' 
+          icon: '/amplify-theme/assets/images/Logos/React-Color@1x.png'
+          id: react
         - title: React Native
-          excerpt: React Native support package.
+          excerpt: AWS Amplify provides React Native Components with aws-amplify-react npm package and a starter App.
           cta: Read more
           url: '/media/react_native_guide' 
+          icon: '/amplify-theme/assets/images/Logos/React-Color@1x.png'
+          id: react-native
         - title: Vue.js
-          excerpt: Vue.j starter app.
+          excerpt: To help you start working with AWS Amplify, we provide a Starter App.
           cta: Read more
           url: '/media/vuejs_guide' 
+          icon: '/amplify-theme/assets/images/Logos/Vue-Color@1x.png'
+          id: vuejs
+        - title: Ionic
+          excerpt: AWS Amplify provides Angular Components that you can use with Ionic in aws-amplify-angular npm package.
+          cta: Read more
+          url: '/media/ionic_guide' 
+          icon: '/amplify-theme/assets/images/Logos/Ionic-Color@1x.png'
+          id: ionic
 
 defaults:
   -
