--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -67,7 +67,7 @@ amplify:
             platform: for JavaScript
         nav:
             - item_name: Quickstart
-              item_url: '/media/quick_start'
+              item_url: '/media/quick_start_home'
             - item_name: Developer Guides
               item_url: '/media/developer_guide'
             - item_name: User Interface
