update vscode extension [ci skip]

--- a/vscode/package.json
+++ b/vscode/package.json
@@ -2,8 +2,9 @@
     "name": "aws-amplify-vscode",
     "displayName": "AWS Amplify API",
     "description": "AWS Amplify API code snippets",
-    "version": "0.0.1",
+    "version": "0.0.3",
     "publisher": "aws-amplify",
+    "icon": "images/logo.png",
     "private": true,
     "engines": {
         "vscode": "^1.22.0"
