fix(amazon-cognito-identity-js): publish a forked version of crypto-browserify package to fix webpack build error

--- a/packages/amazon-cognito-identity-js/package.json
+++ b/packages/amazon-cognito-identity-js/package.json
@@ -62,7 +62,7 @@
   "types": "./index.d.ts",
   "dependencies": {
     "buffer": "4.9.1",
-    "crypto-browserify": "1.0.9",
+    "amplify-crypto-browserify": "1.0.10",
     "js-cookie": "^2.1.4"
   },
   "devDependencies": {
