--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -70,7 +70,7 @@ amplify:
               item_url: '/media/get_started'
             - item_name: Guides
               item_url: '/media/developer_guide'
-            - item_name: CLI
+            - item_name: Toolchain
               item_url: '/media/cli_home'
             - item_name: User Interface
               item_url: '/media/ui_library'
