--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -121,22 +121,22 @@ category_list:
       subs:
         - title: Quick Start
           excerpt: quick start excerpt
-          url: 'quick_start'
+          url: '/media/quick_start'
           icon: '/images/icons/Misc/Present.svg'
         - title: Amplify CLI
           excerpt: CLI excerpt
-          url: 'cli_guide'
+          url: '/media/cli_guide'
           icon: '/images/icons/Misc/Present.svg'
     - category: CloudFeatures
       title: Cloud Features
       excerpt: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-      base_url: 'analytics_guide'
+      base_url: '/media/analytics_guide'
       subs:
         - title: Analytics 
           excerpt: Drop-in analytics to track user sessions, custom user attributes, and in-app metrics.
           cta: Read more
           class: aws-icon-ps-60-pie-bar-charts 
-          url: 'analytics_guide'
+          url: '/media/analytics_guide'
           icon: '/images/icons/Misc/Present.svg'
           services:
             - title: Amazon Pinpoint,
@@ -149,7 +149,7 @@ category_list:
           excerpt: A simple and secure solution for making HTTP requests using REST and GraphQL, with support for real-time data.
           cta: Read more
           class: aws-icon-ps-60-database-server
-          url: 'api_guide' 
+          url: '/media/api_guide' 
           icon: '/images/icons/Misc/Present.svg'   
           services: 
             - title: Amazon API Gateway,
@@ -160,7 +160,7 @@ category_list:
           excerpt:  Authentication APIs with pre-built UI components for your app.  
           cta: Read more
           class: aws-icon-ps-60-shield-circle
-          url: 'authentication_guide'
+          url: '/media/authentication_guide'
           icon: '/images/icons/Misc/Present.svg'
           services:
             - title: Amazon Cognito,
@@ -173,7 +173,7 @@ category_list:
           excerpt: Deploy your Web app or static website for global CDN distribution with media streaming support.
           cta: Read more
           class: aws-icon-ps-60-network-nodes
-          url: 'hosting_guide'   
+          url: '/media/hosting_guide'   
           icon: '/images/icons/Misc/Present.svg'
           services:
               - title: Amazon CloudFront
@@ -182,7 +182,7 @@ category_list:
           excerpt: Create conversational bots powered by deep learning technologies.
           cta: Read more
           class: aws-icon-ps-60-bubble-gear
-          url: 'interactions_guide'   
+          url: '/media/interactions_guide'   
           icon: '/images/icons/Misc/Present.svg'
           services:
               - title: Amazon Lex
@@ -191,7 +191,7 @@ category_list:
           excerpt: Connect your app to message-oriented middleware on the cloud.
           cta: Read more
           class: aws-icon-ps-60-circular-circuit
-          url: 'pub_sub_guide'   
+          url: '/media/pub_sub_guide'   
           icon: '/images/icons/Misc/Present.svg'
           services:
               - title: AWS IoT,
@@ -204,7 +204,7 @@ category_list:
           excerpt: Push notifications with campaign analytics and targeting.
           cta: Read more
           class: aws-icon-ps-60-device-message
-          url: 'push_notifications_setup'   
+          url: '/media/push_notifications_setup'   
           icon: '/images/icons/Misc/Present.svg'
           services:
               - title: Amazon Pinpoint
@@ -213,7 +213,7 @@ category_list:
           excerpt: A simple mechanism for managing user content in public, protected or private storage.
           cta: Read more
           class: aws-icon-ps-60-file-box
-          url: 'storage_guide'   
+          url: '/media/storage_guide'   
           icon: '/images/icons/Misc/Present.svg'
           services:
               - title: Amazon S3
@@ -221,66 +221,66 @@ category_list:
     - category: UtilityModules
       title: Utility Modules
       excerpt: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-      base_url: 'cache_guide'
+      base_url: '/media/cache_guide'
       subs:
         - title: Cache 
           excerpt: A generic LRU cache for storing data with priority and expiration settings. 
           cta: Read more
-          url: 'cache_guide'  
+          url: '/media/cache_guide'  
           icon: '/images/icons/Misc/Present.svg'
         - title: Hub  
           excerpt: A lightweight local event bus for your app.
           cta: Read more
-          url: 'hub_guide' 
+          url: '/media/hub_guide' 
           icon: '/images/icons/Misc/Present.svg'
         - title: I18n  
           excerpt: A lightweight internationalization solution.
           cta: Read more
-          url: 'i18n_guide'  
+          url: '/media/i18n_guide'  
           icon: '/images/icons/Misc/Present.svg'
         - title: Logger  
           excerpt: Console logging utility.
           cta: Read more
-          url: 'logger_guide'  
+          url: '/media/logger_guide'  
           icon: '/images/icons/Misc/Present.svg'
         - title: Service Worker 
           excerpt: A utility class to work with PWA and Service Worker APIs. 
           cta: Read more
-          url: 'service_workers_guide'   
+          url: '/media/service_workers_guide'   
           icon: '/images/icons/Misc/Present.svg'     
     - category: FrontEndSupport
       title: Front End Support
       excerpt: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-      base_url: 'angular_guide'
+      base_url: '/media/angular_guide'
       subs:
         - title: Angular 
           excerpt: AWS Amplify provides Angular Components with aws-amplify-angular npm package.
           cta: Read more
-          url: 'angular_guide' 
+          url: '/media/angular_guide' 
           icon: '/images/Logos/Angular-Color@1x.png'
           id: angular
         - title: React 
           excerpt: AWS Amplify provides React Components with aws-amplify-react npm package and a starter App.
           cta: Read more
-          url: 'react_guide' 
+          url: '/media/react_guide' 
           icon: '/images/Logos/React-Color@1x.png'
           id: react
         - title: React Native
           excerpt: AWS Amplify provides React Native Components with aws-amplify-react npm package and a starter App.
           cta: Read more
-          url: 'react_native_guide' 
+          url: '/media/react_native_guide' 
           icon: '/images/Logos/React-Color@1x.png'
           id: react-native
         - title: Vue.js
           excerpt: To help you start working with AWS Amplify, we provide a Starter App.
           cta: Read more
-          url: 'vuejs_guide' 
+          url: '/media/vuejs_guide' 
           icon: '/images/Logos/Vue-Color@1x.png'
           id: vuejs
         - title: Ionic
           excerpt: AWS Amplify provides Angular Components that you can use with Ionic in aws-amplify-angular npm package.
           cta: Read more
-          url: 'ionic_guide' 
+          url: '/media/ionic_guide' 
           icon: '/images/Logos/Ionic-Color@1x.png'
           id: ionic
 
