--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -74,7 +74,7 @@ amplify:
               item_url: '/media/tutorials'
             - item_name: Toolchain
               item_url: '/media/cli_home'
-            - item_name: User Interface
+            - item_name: UI Components
               item_url: '/media/ui_library'
             - item_name: API
               item_url: '/api/'
