adding testURL to api jest config

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -71,6 +71,7 @@
       "jsx"
     ],
     "testEnvironment": "jsdom",
+    "testURL": "http://localhost/",
     "mapCoverage": true,
     "coverageThreshold": {
       "global": {
