--- a/packages/interactions/package.json
+++ b/packages/interactions/package.json
@@ -66,6 +66,7 @@
       "jsx"
     ],
     "testEnvironment": "jsdom",
+    "testURL": "http://localhost/",
     "mapCoverage": true,
     "coverageThreshold": {
       "global": {
