added testURL in pubsub, pushnotification and storage jest configs

--- a/packages/pushnotification/package.json
+++ b/packages/pushnotification/package.json
@@ -68,6 +68,7 @@
       "jsx"
     ],
     "testEnvironment": "jsdom",
+    "testURL": "http://localhost/",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
