--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -70,6 +70,7 @@
       "jsx"
     ],
     "testEnvironment": "jsdom",
+    "testURL": "http://localhost/",
     "mapCoverage": true,
     "coverageThreshold": {
       "global": {
