phone img change + nav fix + library selector icons

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -333,5 +333,5 @@ js_libraries:
     url: '?platform=react-native'
   - title: Angular
     url: '?platform=angular'
-  - title: JavaScript (no library)
+  - title: JavaScript
     url: '?platform=purejs'
